--- a/src/page/temp_index/index.less
+++ b/src/page/temp_index/index.less
@@ -7,3 +7,8 @@
     height: 20px;
     background-color: red;
 }
+.image{
+    background: url("./i/1.png");
+    width: 100px;
+    height: 100px;    
+}
