--- a/src/page/index/index.less
+++ b/src/page/index/index.less
@@ -1,6 +1,8 @@
-#app{
+.page{
     padding: 10px;
     display: flex;
+    background: green;
+    transform: translateZ(0);
 }
 .test{
     width: 20px;
